--- a/second.html
+++ b/second.html
@@ -10,9 +10,11 @@
     <section>
         <div class="header">
             <a href="#default" class="logo1"><img src="images/Adobe Scan 12 Oct 2023_1.png" alt=""></a>
-            <div class="header-right">
-                <div class="baghu">
+             <div class="header-right">
+                <div>
                     <a class="active" href="index.html">Home</a>
+                </div>
+                <div class="baghu">
                     <a href="first.html">1</a>
                     <a href="second.html">2</a>
                     <a href="third.html">3</a>
