--- a/second.html
+++ b/second.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ashoka</title>
         <link rel="stylesheet" href="css/style1.css">
+        <link rel="icon" type="image/x-icon" href="images/Adobe Scan 12 Oct 2023_1.png">
     </head>
 <body>
     <section>
