--- a/ten.html
+++ b/ten.html
@@ -5,14 +5,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Chafa</title>
         <link rel="stylesheet" href="css/style1.css">
+        <link rel="icon" type="image/x-icon" href="images/Adobe Scan 12 Oct 2023_1.png">
     </head>
 <body>
     <section>
         <div class="header">
             <a href="#default" class="logo1"><img src="images/Adobe Scan 12 Oct 2023_1.png" alt=""></a>
             <div class="header-right">
-                <div class="baghu">
+                <div>
                     <a class="active" href="index.html">Home</a>
+                </div>
+                <div class="baghu">
                     <a href="first.html">1</a>
                     <a href="second.html">2</a>
                     <a href="third.html">3</a>
